Fixed alignment issue user profile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -177,6 +177,11 @@
   word-break: break-all
 }
 
+.user-reviews-votes{
+  float: left;
+  /* marg-top: 1em; */
+}
+
 .user-follow-block{
   @include block-grid(
     $per-row: 5
